# banco-agil-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
data/: clientes.csv  score_limite.csv  solicitacoes_aumento_limite.csv
docs/adr/: 001-langgraph-orchestrator.md  002-gemini-free-tier.md  003-conversational-state.md  004-guardrails-middleware.md  005-langsmith-observability.md  006-context-engineering.md  007-structured-output.md  008-command-api.md  009-api-hardening.md  010-resilience-patterns.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  EmptyState.svelte  Header.svelte  TechDetails.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
src/: config.py
src/agents/: _helpers.py  compliance.py  credit.py  credit_interview.py  exchange.py  triage.py
src/core/: graph.py  guardrails.py  llm_factory.py
src/schemas/: state.py
src/tools/: csv_tools.py  exchange_api.py  score_calculator.py
streamlit_app/: Dockerfile  app.py
streamlit_app/.streamlit/: config.toml
tests/: test_agents.py  test_compliance.py  test_csv_tools.py  test_exchange_api.py  test_guardrails.py  test_integration.py  test_score_calculator.py  test_security.py
