[project]
name = "banco-agil-agents"
version = "1.0.0"
description = "Sistema de atendimento bancário com agentes de IA especializados"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
